# notion-azure-items

./: .gitignore  Makefile  config.ini.template  pyproject.toml  requirements.txt
notion_azure_items/: main.py
