[tool.poetry]
name = "notion-azure-items"
version = "0.1.0"
description = ""
authors = ["Tyler Neuenschwander <tcneuen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.14"
azure-devops = "^7.1.0b4"
notion-client = "^2.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pex = "^2.19.1"
setuptools = "^75.1.0"
wheel = "^0.44.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notion-azure-items = "notion_azure_items.main:app"
